style: fixed image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -343,7 +343,7 @@ main {
   background-position: 50% 35%;
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: 300px;
   /* transform: translateY(101%); */
   /* transform: translateY(0%); */
 
@@ -409,6 +409,9 @@ main {
 }
 
 @media screen and (min-width: 53em) {
+  .preview__img-inner {
+    height: 100%;
+  }
   .frame {
     margin-bottom: 0;
     grid-template-columns: repeat(3, 1fr);
